--- a/src/movies/movieCard/MovieCard.css
+++ b/src/movies/movieCard/MovieCard.css
@@ -9,7 +9,7 @@
 
 .movie-card-visual {
   position: relative;
-  max-width: 185px;
+  max-width: 175px;
   max-height: 260px;
   border-radius: 10px;
   overflow: hidden;
@@ -105,7 +105,7 @@
 
 @media (max-width: 350px) {
   .movie-card {
-    max-width: 146px;
+    max-width: 136px;
     max-height: 230px;
   }
 
